--- a/main/portfolio/static/portfolio/css/main.css
+++ b/main/portfolio/static/portfolio/css/main.css
@@ -1,3 +1,23 @@
+body {
+  font-family: "ClashDisplay-Variable", sans-serif;
+  font-weight: 400;
+  background: #1D1F25;
+}
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.container {
+  padding: 20px 14%;
+}
+
+.topbar {
+  padding: 20px 14%;
+}
+.topbar a {
+  color: #35B4FF;
+}
 
 /*# sourceMappingURL=main.css.map */
