--- a/main/portfolio/templates/portfolio/base.html
+++ b/main/portfolio/templates/portfolio/base.html
@@ -26,12 +26,28 @@
     {% endif %}
 </head>
 <body>
-<div class="topbar">
-    <a href="">Instelce</a>
-</div>
+<nav class="topbar">
+    <a href="/" class="topbar__brand">Instelce</a>
+
+    <ul class="topbar__menu">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Experiences</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</nav>
 
 {% block content %}{% endblock content %}
 
+{# Script #}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"
+        integrity="sha512-2fk3Q4NXPYAqIha0glLZ2nluueK43aNoxvijPf53+DgL7UW9mkN+uXc1aEmnZdkkZVvtJZltpRt+JqTWc3TS3Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"
+        integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="{% static 'portfolio/js/script.js' %}"></script>
 {% block script %}{% endblock script %}
 </body>
 </html>
