--- a/portfolio/static/portfolio/css/main.css
+++ b/portfolio/static/portfolio/css/main.css
@@ -28,6 +28,7 @@ a {
 }
 
 p {
+  font-size: 14px;
   color: rgba(255, 255, 255, 0.8);
   font-weight: 300;
 }
@@ -37,6 +38,7 @@ p {
   position: relative;
   padding: 40px 10%;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   font-family: "clash-display";
   letter-spacing: 1px;
@@ -50,9 +52,15 @@ p {
   justify-content: space-between;
 }
 .topbar .topbar__link {
-  padding: 0px 20px;
   color: rgba(255, 255, 255, 0.8);
   font-weight: 300;
+}
+.topbar .topbar__link .link {
+  margin: 0 1rem;
+  padding: 1rem 2rem;
+}
+.topbar .topbar__link .link:last-child {
+  margin: 0;
 }
 
 .footer {
@@ -93,6 +101,7 @@ p {
   font-weight: 200;
 }
 .home__page p {
+  font-size: 16px;
   color: rgba(53, 180, 255, 0.8);
 }
 .home__page .gradient__right,
@@ -123,6 +132,122 @@ p {
   box-shadow: #262A5B 0px 0px 50px 5px;
 }
 
+.projects__page {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1rem 1rem;
+}
+.projects__page .project__card {
+  height: auto;
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  background: #0f111c;
+}
+.projects__page .project__card::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: inline-block;
+  background: #262A5B;
+}
+.projects__page .project__card:hover img {
+  width: 100%;
+  padding: 0;
+}
+.projects__page .project__card:hover .project__link {
+  transform: translateY(0);
+}
+.projects__page .project__card img {
+  width: 100%;
+  padding: 1rem 1rem 0 1rem;
+  margin-bottom: 0.5rem;
+  transition: width 0.3s, padding 0.3s;
+}
+.projects__page .project__card .card__body {
+  padding: 0 1rem;
+}
+.projects__page .project__card .card__body h4 {
+  margin-bottom: 0.5rem;
+  font-size: 18px;
+  font-family: "clash-display";
+  font-weight: 500;
+  letter-spacing: 1px;
+  color: #FFF;
+}
+.projects__page .project__card .card__body p {
+  max-height: 80px;
+  overflow: hidden;
+  position: relative;
+}
+.projects__page .project__card .card__body p::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(180deg, rgba(38, 42, 91, 0) 0%, #0f111c 100%);
+}
+.projects__page .project__card .card__tags {
+  padding: 0 1rem;
+  margin: 1rem 0;
+}
+.projects__page .project__card .card__tags .tag {
+  margin: 0 0.1rem;
+  padding: 0.2rem 0.8rem;
+  display: inline-block;
+  font-size: 12px;
+  font-weight: 200;
+  color: #FFF;
+  text-transform: capitalize;
+  background: #262A5B;
+  border-radius: 99px;
+  box-shadow: #0C0E15 0px 0px 5px 1px;
+  transition: box-shadow 0.3s;
+}
+.projects__page .project__card .card__tags .tag:hover {
+  box-shadow: #262A5B 0px 0px 5px 1px;
+}
+.projects__page .project__card .project__link {
+  width: 100%;
+  z-index: 2;
+  font-weight: 300;
+  transform: translateY(100%);
+  transition: transform 0.3s;
+}
+.projects__page .project__card .project__link::before {
+  background: #0f111c;
+}
+
+.tag__header {
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.tag__header span.tag {
+  margin: 0 0.1rem;
+  padding: 0.2rem 0.8rem;
+  display: inline-block;
+  font-size: 2rem;
+  font-weight: 200;
+  color: #FFF;
+  text-transform: capitalize;
+  background: #262A5B;
+  border-radius: 99px;
+  box-shadow: #0C0E15 0px 0px 5px 1px;
+  transition: box-shadow 0.3s;
+}
+.tag__header .link {
+  padding: 1rem 2rem;
+}
+
 .link {
   margin: 0;
   padding: 0 0.2rem;
@@ -131,7 +256,11 @@ p {
   position: relative;
   pointer-events: auto;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #fff;
+  font-weight: 300;
   background: #262A5B;
   border: none;
   transition: color 0.3s;
