--- a/portfolio/static/portfolio/scss/buttons.scss
+++ b/portfolio/static/portfolio/scss/buttons.scss
@@ -8,7 +8,12 @@
     pointer-events: auto;
     cursor: pointer;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     color: #fff;
+    font-weight: 300;
     background: $color-space-cadet;
     border: none;
     transition: color 0.3s;
