front: finish header background, start cube

--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -55,6 +55,7 @@ a {
 :root {
   --color-white: 255, 255, 255;
   --color-black: 13, 13, 13;
+  --color-black-2: 18, 18, 18;
   --color-gray-dark: 27, 27, 27;
   --color-gray: 42, 42, 42;
   --color-accent: 88, 86, 214;
