--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -89,6 +89,7 @@ button {
   background: transparent;
   font-size: inherit;
   font-family: inherit;
+  cursor: pointer;
 }
 
 // Variables
@@ -108,11 +109,33 @@ button {
 
 // Main
 body {
+  max-width: 100vw;
+  overflow-x: hidden;
   background: rgb(var(--color-black));
 
   font-family: var(--main-font);
   font-size: 16px;
   color: rgb(var(--color-white));
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  position: fixed;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(var(--color-gray-dark));
+  border-radius: 10rem;
+
+  transition: background .3s;
+
+  &:hover {
+    background: rgb(var(--color-gray));
+  }
 }
 
 // Other imports
