--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -138,5 +138,10 @@ body {
   }
 }
 
+::selection {
+  background: rgb(var(--color-accent));
+  color: rgb(var(--color-black));
+}
+
 // Other imports
 @import 'styles/fonts';
