feat(front): add responsive and fix some things

--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -116,6 +116,8 @@ body {
   font-family: var(--main-font);
   font-size: 16px;
   color: rgb(var(--color-white));
+  
+  scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
